--- a/src/componentsStyles/sectionNosotros.css
+++ b/src/componentsStyles/sectionNosotros.css
@@ -9,3 +9,19 @@
   padding-bottom: 20px;
   border-bottom: 4px solid rgb(244, 126, 32);
 }
+
+@media (max-width: 1000px) {
+  .container-nosotros h1 {
+    text-align: center;
+  }
+
+  .nosotros-p {
+    display: none;
+  }
+}
+
+@media (max-width: 767px) {
+  .container-nosotros img {
+    width: 250px;
+  }
+}
